--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Jaesik Park is an Assistant Professor of <a href="https://cse.snu.ac.kr/" target
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2024.09. I will serve as an Area Chair for <b>CVPR 2025</b>.
+					2024.09. I will serve as an Area Chair for <b>CVPR 2025</b> and <b>ICLR 2025</b>.
 				</li>
 				<li class="list-group-item">
 					2024.09. A paper about brick assembly is accepted to Transactions on Machine Learning Research (<b>TMLR</b>).
