--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,33 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Lim_KISSMatcher_arXiv_2024">
+			<img src="publications/data/24_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>KISS-Matcher: Fast and Robust Point Cloud Registration Revisited</h4>
+			<p class="text-muted">
+				Hyungtae Lim, Daebeom Kim, Gunhee Shin, Jingnan Shi, Ignacio Vizzo, Hyun Myung, <b>Jaesik Park</b>, and Luca Carlone.
+				<em>2409.15615 (arXiv), 2024</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2409.15615" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/MIT-SPARK/KISS-Matcher" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lim_KISSMatcher_arXiv_2024_bibtex_button" aria-expanded="false" aria-controls="Lim_KISSMatcher_arXiv_2024_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lim_KISSMatcher_arXiv_2024_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Lim_KISSMatcher_arXiv_2024,<br>
+							Title={KISS-Matcher: Fast and Robust Point Cloud Registration Revisited},<br>
+							Author={Hyungtae Lim and Daebeom Kim and Gunhee Shin and Jingnan Shi and Ignacio Vizzo and Hyun Myung and Jaesik Park and Luca Carlone},<br>
+							Journal={2409.15615 (arXiv)},<br>
+							Year={2024}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Ahn_BudgetAware_TMLR_2024">
 			<img src="publications/data/24_tmlr.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Budget-Aware Sequential Brick Assembly with Efficient Constraint Satisfaction</h4>
