--- a/lab.html
+++ b/lab.html
@@ -121,17 +121,17 @@
 			Integrated Ph.D. student<br>
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/members/jaeah.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
-			<h5>Jaeah Lee</h5>
-			2024 Spring<br>
-			Integrated Ph.D. student<br>
-			<a href="https://jaeah.me" target="_blank">Homepage</a>
-		</div>
-		<div class="col-md-3 text-center">
 			<img src="source/members/sangmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Sang Min Kim</h5>
 			2024 Spring<br>
 			Integrated Ph.D. student<br>
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/members/jaeah.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Jaeah Lee</h5>
+			2024 Spring<br>
+			Master's student<br>
+			<a href="https://jaeah.me" target="_blank">Homepage</a>
 		</div>
 		<div class="col-md-3 text-center">
 			<img src="source/members/namtae.jpg" class="rounded-circle img-thumbnail shadow mb-2">
